--- a/greenmonster/Makefile
+++ b/greenmonster/Makefile
@@ -1,6 +1,6 @@
 obj-m = fw.o
-KVERSION = $(shell uname -r)
+KVERSION = $(shell uname -r)-pae
 all:
-        make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
+	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
 clean:
-        make -C /lib/modules/$(KVERSION)/build M=$(PWD) clean
+	make -C /lib/modules/$(KVERSION)/build M=$(PWD) clean
